--- a/livro.css
+++ b/livro.css
@@ -14,6 +14,11 @@ h1, h2, h3, p {
     text-align: center;
     margin: 15px 0px;
 }
+@media only screen and (max-width: 600px) {
+    p {
+        font-size: 14px;
+    }
+}
 span{
     font-weight: bold;
 }
