--- a/livro.css
+++ b/livro.css
@@ -14,11 +14,6 @@ h1, h2, h3, p {
     text-align: center;
     margin: 15px 0px;
 }
-@media only screen and (max-width: 600px) {
-    p {
-        font-size: 14px;
-    }
-}
 span{
     font-weight: bold;
 }
@@ -40,3 +35,34 @@ img{
     width:190px;
     
 }
+
+/* Estilos para dispositivos móveis */
+@media only screen and (max-width: 600px) {
+    /* Ajuste do tamanho da fonte */
+    h1 {
+        font-size: 24px;
+    }
+    h2 {
+        font-size: 20px;
+    }
+    h3 {
+        font-size: 18px;
+    }
+    p {
+        font-size: 16px;
+    }
+    /* Ajuste do tamanho da imagem */
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+    /* Ajuste do espaçamento */
+    body, div {
+        padding: 10px;
+    }
+    /* Centraliza o texto */
+    div {
+        text-align: justify;
+    }
+}
+
